Add Template Views
Some cleaning

--- a/StarFlintSaver/StarFlintSaver.Windows.csproj
+++ b/StarFlintSaver/StarFlintSaver.Windows.csproj
@@ -65,4 +65,8 @@
     <ProjectReference Include="..\StarFlintSaver.Library\StarFlintSaver.Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
